main imajı olay tarihine göre ilkinden almak + silici popover z-index fix

--- a/client/css/main.styl
+++ b/client/css/main.styl
@@ -608,7 +608,8 @@ button, a.buttonSq {
 		i.silici, .siliciPopover {
 			position absolute
 			top 1px
-			left 1px			
+			left 1px
+			z-index 13		
 		}
 		i.silici {
 			width 20px
